* Added: Support for PHP 7.4.
* Added: <txp:if_request /> tag for checking server, URL, POST and cookie
  variables.
* Added: <txp:pages /> tag for enhanced pagination schemes.
* Added: 'item' attribute to <txp:yield /> tag.
* Added: 'title' attribute to image tags.
* Added: 'class' attribute to comment form tags.
* Added: 'match' and 'separator' attributes to <txp:if_variable /> tag.
* Added: 'pg', 'total' and 'limit' attributes to <txp:newer /> and
  <txp:older /> tags.
* Added: Support for id ranges in some tags and admin fields.
* Added: Support for HTTP status 451 (Unavailable For Legal Reasons).
* Added: Support for native PHP password hashing.
* Added: Dark Mode support in Hive admin theme.
* Added: Pageless sections for content snippets and creative article flows.
* Added: Per-section article link format override.
* Added: 'breadcrumb/title' article link format.
* Added: 'section/category/title' article link format.
* Added: Links have an editable publish time and date.
* Added: Category searching to a specified depth.
* Added: Custom field aliases and URL filters via valueless attributes.
* Added: Global 'evaluate', 'replace' and 'yield' attributes. Evaluate can
  execute contained content in arbitrary order.
* Added: Ability to trim lists when using valueless 'trim' attribute.
* Added: Link to phpinfo() in Diagnostics panel.
* Added: Configuration file generated during setup can be downloaded.
* Added: Support for Bengali language translation.
* Added: Support for Khmer language translation.
* Added: Support for Norwegian Nynorsk language translation.
* Added: Support for Welsh language translation.
* Added: Latest translations. Thanks to all Crowdin translators for their work.
* Added: Hive and Classic admin themes now support 3 column layouts.
* Added: Option to disable auto-expanding text areas in Hive admin themes via
  config.php file. See Hive theme's README.txt file for instructions.
* Added: Warning to admin panels if JavaScript is unavailable.